--- a/index.html
+++ b/index.html
@@ -5,30 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="./assets/css/main.css">
   
   <title>Frontend Mentor | Social links profile</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
 <body>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
+  <section class="card">
+    <img class="card__img" src="./assets/images/avatar-jessica.jpeg" alt="Foto perfil de usuario">
+    <article class="card__datos">
+      <h1 class="card__datos-nombre">Jessica Randall</h1>
+      <p class="card__datos-ciudad">London, United Kingdom</p>
+    </article>
+    <h2 class="card__descripcion">"Front-end developer and avid reader."</h2>
+    <article class="card__social">
+      <button class="card__social-github card__social-btn">GitHub</button>
+      <button class="card__social-frontend card__social-btn">Frontend Mentor</button>
+      <button class="card__social-linkedin card__social-btn">LinkedIn</button>
+      <button class="card__social-twitter card__social-btn">Twitter</button>
+      <button class="card__social-intagram card__social-btn">Instagram</button>
+    </article>
+  </section>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
